[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/Title.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons/fullscreen.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons/newgame_mo2.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons/options.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons/options_mo.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons/fullscreen_mo.png" type="Texture" id=6]
[ext_resource path="res://sprites/buttons/newgame.png" type="Texture" id=7]
[ext_resource path="res://sprites/titleword2.png" type="Texture" id=8]
[ext_resource path="res://Title.gd" type="Script" id=9]

[node name="Title" type="Node"]
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Top" type="Control" parent="VBoxContainer"]
margin_right = 1091.0
margin_bottom = 630.0
rect_min_size = Vector2( 0, 630 )

[node name="Mid" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 634.0
margin_right = 1091.0
margin_bottom = 807.0

[node name="Left Mid" type="Control" parent="VBoxContainer/Mid"]
margin_right = 900.0
margin_bottom = 173.0
rect_min_size = Vector2( 900, 0 )

[node name="Main Menu" type="VBoxContainer" parent="VBoxContainer/Mid"]
margin_left = 904.0
margin_right = 1091.0
margin_bottom = 173.0

[node name="NewGame" type="TextureButton" parent="VBoxContainer/Mid/Main Menu"]
margin_right = 187.0
margin_bottom = 55.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 3 )

[node name="Options" type="TextureButton" parent="VBoxContainer/Mid/Main Menu"]
margin_top = 59.0
margin_right = 187.0
margin_bottom = 114.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="FullScreen" type="TextureButton" parent="VBoxContainer/Mid/Main Menu"]
margin_top = 118.0
margin_right = 187.0
margin_bottom = 173.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 6 )

[node name="Middle Padding" type="Control" parent="VBoxContainer"]
margin_top = 811.0
margin_right = 1091.0
margin_bottom = 811.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bot" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 815.0
margin_right = 1091.0
margin_bottom = 1007.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Bot"]
margin_right = 1091.0
margin_bottom = 192.0
size_flags_horizontal = 3

[node name="BotLeft" type="VBoxContainer" parent="VBoxContainer/Bot/HBoxContainer"]
margin_right = 27.0
margin_bottom = 192.0

[node name="padding" type="Control" parent="VBoxContainer/Bot/HBoxContainer/BotLeft"]
margin_right = 27.0
margin_bottom = 174.0
size_flags_vertical = 3

[node name="Version" type="Label" parent="VBoxContainer/Bot/HBoxContainer/BotLeft"]
margin_top = 178.0
margin_right = 27.0
margin_bottom = 192.0
text = "v0.0"
valign = 2

[node name="bottom padding" type="Control" parent="VBoxContainer/Bot/HBoxContainer"]
margin_left = 31.0
margin_right = 47.0
margin_bottom = 192.0
size_flags_horizontal = 3

[node name="Title" type="TextureRect" parent="VBoxContainer/Bot/HBoxContainer"]
margin_left = 51.0
margin_right = 1091.0
margin_bottom = 192.0
texture = ExtResource( 8 )

[connection signal="mouse_entered" from="VBoxContainer/Mid/Main Menu/NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Mid/Main Menu/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Mid/Main Menu/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Mid/Main Menu/Options" to="." method="_on_Options_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Mid/Main Menu/FullScreen" to="." method="_on_FullScreen_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Mid/Main Menu/FullScreen" to="." method="_on_FullScreen_pressed"]
